* Removed MCP from being able to be randomized, for the moment
* Limited the number of locations Jafar can show up in
* Hades I is no longer randomized, due to a bug where the fight can get stuck in infinite loading

3.0.3
* Hotfix for Party Member Rando. Also prevent Final Battle Riku object from being used in party member rando (When Riku shows up it will always be world TNTNW Riku)

3.0.2
* Bullet proofed the AI mod logic to fix common 3.0 crashes such as STT struggle fights
* Added other_enemies as an option, which enabled bulky vendors, bees, and pirates all to be randomized in the "heartless" pool
* Fix for nightmare_enemies, now it should work as intended
* various changes to the placement logic to prevent crashes/softlocks/etc

3.0.0

New Features
* Misc bosses option has been added, and contains bosses such as Jafar, MCP, and other bosses that are more like gimmicks than not. In other news, Groundshaker is the only boss that can not be randomized at all. This should currently be treated as an unstable and experimental option
* Randomize superbosses option has been split into 3 options, for terra, sephiroth, and the datas
* There is now a Scale Boss Stats option. Turning it off will have close to the same effect as the Better Boss Scaling mod (however datas/terra will be forced to level 99 still)
* Added an option to treat Nobodys as a separate type of enemy, depending on the other options enabled this can cause some enemies to randomize very predictably
* Party member rando has been added. Currently Donald/Goofy are not randomized because the game throws a hissy fit when you have more than one world character in your party at once
* Costume rando has been added. Pretty simple but it was trivial to add at the same time as Party Member rando