@@ -122,7 +122,7 @@ class CutsceneRemover:
                     if removecs:
                         new_cutscene_name = self.get_cutscene_name(evtprogram, eventnum, eventtype)
                         new_cutscene = self.cutscenes[new_cutscene_name]
-                        print(ardname,eventnum,new_cutscene_name)
+                        #print(ardname,eventnum,new_cutscene_name)
                         # TODO should not be creating hundreds of duplicate event files
                         eventasset = self.assetgenerator.modwriter.writeEvent(ardname, str(eventnum), new_cutscene)
                         ardasset["source"].append(eventasset)
