@@ -11631,7 +11631,6 @@
         ],
         "variations": [
             "Gambler",
-            "Gambler (Summons Darkness)",
             "Gambler (5 0)",
             "Gambler (90 0)",
             "Gambler (99 0)"
@@ -11646,66 +11645,6 @@
         "children": [
             "Gambler"
         ],
-        "msn_required": false,
-        "msn_source_as": null,
-        "aimods": [],
-        "cmdmods": [],
-        "mickey_source": false,
-        "final_fight": false,
-        "can_be_enemy": false,
-        "can_be_enemy_override": false,
-        "msn": null,
-        "size": 0,
-        "room_size": 0,
-        "roommaxsize": null,
-        "blacklist_source": [],
-        "blacklist_destination": [],
-        "whitelist_source": [],
-        "whitelist_destination": [],
-        "adds": [],
-        "sp_ids": [],
-        "subtracts": [],
-        "msn_list": [],
-        "program": null,
-        "roomsizemultiplier": 1,
-        "unchanged_file_size": false,
-        "obj_edits": {},
-        "luamod": null,
-        "roomData": {}
-    },
-    "Gambler (Summons Darkness)": {
-        "enabled": false,
-        "isnightmare": true,
-        "vars": [
-            1,
-            0
-        ],
-        "name": "Gambler (Summons Darkness)",
-        "enmp_index": 49,
-        "hp": 100,
-        "level": 99,
-        "limiter": 17,
-        "model": "M_EX950",
-        "obj_id": 314,
-        "sizeTag": "memoryLarge",
-        "type": "enemy",
-        "tags": [
-            "nobody"
-        ],
-        "variations": [
-            "Gambler",
-            "Gambler (Summons Darkness)",
-            "Gambler (5 0)",
-            "Gambler (90 0)",
-            "Gambler (99 0)"
-        ],
-        "replace_as": null,
-        "source_replace_allowed": true,
-        "msn_replace_allowed": true,
-        "category": "nobody",
-        "parent": "Gambler",
-        "variationof": null,
-        "children": [],
         "msn_required": false,
         "msn_source_as": null,
         "aimods": [],
@@ -11753,7 +11692,6 @@
         ],
         "variations": [
             "Gambler",
-            "Gambler (Summons Darkness)",
             "Gambler (5 0)",
             "Gambler (90 0)",
             "Gambler (99 0)"
@@ -11813,7 +11751,6 @@
         ],
         "variations": [
             "Gambler",
-            "Gambler (Summons Darkness)",
             "Gambler (5 0)",
             "Gambler (90 0)",
             "Gambler (99 0)"
@@ -11873,7 +11810,6 @@
         ],
         "variations": [
             "Gambler",
-            "Gambler (Summons Darkness)",
             "Gambler (5 0)",
             "Gambler (90 0)",
             "Gambler (99 0)"
@@ -20975,6 +20911,9 @@
             }
         ],
         "enabled": true,
+        "blacklist_source": [
+            "Roxas"
+        ],
         "enmp_index": 130,
         "tags": [
             "solo",
@@ -21011,7 +20950,6 @@
         "can_be_enemy_override": false,
         "sizeTag": null,
         "roommaxsize": null,
-        "blacklist_source": [],
         "blacklist_destination": [],
         "whitelist_source": [],
         "whitelist_destination": [],
@@ -21043,7 +20981,6 @@
             "Pete TR",
             "Prison Keeper",
             "Riku",
-            "Roxas",
             "Sark",
             "Scar",
             "Seifer",
@@ -21786,10 +21723,8 @@
         "whitelist_source": [
             "Axel I",
             "Axel II",
-            "Barbossa",
             "Blizzard Lord",
             "Dark Thorn",
-            "Grim Reaper I",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -21802,7 +21737,6 @@
             "Seifer",
             "Setzer",
             "Tifa",
-            "Twilight Thorn",
             "Vivi",
             "Volcano Lord",
             "Yuffie"
@@ -21846,7 +21780,6 @@
         "available": [
             "Blizzard Lord",
             "Dark Thorn",
-            "Grim Reaper I",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -21904,10 +21837,8 @@
         "whitelist_source": [
             "Axel I",
             "Axel II",
-            "Barbossa",
             "Blizzard Lord",
             "Dark Thorn",
-            "Grim Reaper I",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -21920,7 +21851,6 @@
             "Seifer",
             "Setzer",
             "Tifa",
-            "Twilight Thorn",
             "Vivi",
             "Volcano Lord",
             "Yuffie"
@@ -22005,10 +21935,8 @@
         "whitelist_source": [
             "Axel I",
             "Axel II",
-            "Barbossa",
             "Blizzard Lord",
             "Dark Thorn",
-            "Grim Reaper I",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -22021,7 +21949,6 @@
             "Seifer",
             "Setzer",
             "Tifa",
-            "Twilight Thorn",
             "Vivi",
             "Volcano Lord",
             "Yuffie"
@@ -22104,10 +22031,8 @@
         "whitelist_source": [
             "Axel I",
             "Axel II",
-            "Barbossa",
             "Blizzard Lord",
             "Dark Thorn",
-            "Grim Reaper I",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -22120,7 +22045,6 @@
             "Seifer",
             "Setzer",
             "Tifa",
-            "Twilight Thorn",
             "Vivi",
             "Volcano Lord",
             "Yuffie"
@@ -22204,10 +22128,8 @@
         "whitelist_source": [
             "Axel I",
             "Axel II",
-            "Barbossa",
             "Blizzard Lord",
             "Dark Thorn",
-            "Grim Reaper I",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -22220,7 +22142,6 @@
             "Seifer",
             "Setzer",
             "Tifa",
-            "Twilight Thorn",
             "Vivi",
             "Volcano Lord",
             "Yuffie"
